# xmu_assistant

./: Cargo.toml  README.md
src/: main.rs
src/course_downloader/: download.rs  main.rs  mod.rs
src/login/: main.rs  mod.rs  qrcode.rs  session.rs
src/public/: download_file.rs  logger.rs  mod.rs  thread_manage.rs
src/setting/: main.rs
