[package]
name = "xmu_assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.97"
chrono = "0.4.40"
curl = "0.4.47"
dialoguer = "0.11.0"
env_logger = "0.11.7"
lazy_static = "1.5.0"
log = "0.4.26"
reqwest = {version="0.12.14",features=["blocking","json"]}
serde_json = "1.0.140"
threadpool = "1.8.1"
