[package]
name = "xmu_assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.97"
bardecoder = "0.5.0"
base64 = "0.22.1"
chrono = "0.4.40"
cookie_store = "0.21.1"
crossterm = "0.28.1"
curl = "0.4.47"
dialoguer = "0.11.0"
env_logger = "0.11.7"
image = "0.24"
lazy_static = "1.5.0"
log = "0.4.26"
qrcode = "0.14.1"
rand = {version="0.9.0",features=["alloc"]}
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking", "json", "cookies"] }
reqwest_cookie_store = "0.8.0"
serde = "1.0.219"
serde_json = "1.0.140"
soft-aes = "0.2.2"
threadpool = "1.8.1"
urlencoding = "2.1.3"
